--- a/_data/2021/lisbon/schedule.yml
+++ b/_data/2021/lisbon/schedule.yml
@@ -17,6 +17,7 @@
     - name: "2:45 - 3:15 Whole group debrief about case study (*Zoom*)"
     - name: "3:20 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "3:45 - 4:00 [Apply](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#preparation) for data access for Fragile Families Challenge activity if you haven't already"
+    - name: "4:00 - 5:30 Talk by Prof. David Lazer"
 
 - date: 2021-06-15
   name: Collecting Digital Trace Data
@@ -56,7 +57,7 @@
     - name: "3:00 - 3:15 Break"
     - name: "3:15 - 3:30 Whole group debrief about group exercise (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
-    - name: "4:30 - 6:00 Talk by Moinul Zaber"
+    - name: "4:30 - 6:00 Talk by Dr. Moinul Zaber: Prospects of CSS for policy making in the developing world"
 
 - date: 2021-06-18
   name: Mass collaboration and machine learning
