update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -93,7 +93,7 @@
   name: "Day 1: Introduction and Ethics"
   events:
     - name: "[Day 1: Pre-arrival videos & corresponding slides](https://sicss.io/curriculum)"
-    - name: '9:00 - 10:00 "R" Office hours with Mathematica TAs (as needed) (*Zoom*)'
+    - name: '9:00 - 10:00 "R" Office hours with Mathematica TAs (as needed) (*Zoom*)(You have received the Zoom link for the day over email)'
     - name: "10:00 - 10:30 Institute Introduction and logistics (*Zoom*)(You have received the Zoom link for the day over email) (video) "
     - name: "10:30 - 11:30 Small group discussions [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day1-intro-ethics/small_group_discussions.md) (*Zoom*) (video)"
     - name: "11:30 - 12:00 Break"
