--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -37,7 +37,7 @@
   name: ""
   events:
     - name: "8:30 - 9:55 Group project research idea pitch"
-    - name: "10:00 - 11:55 Zhiyuan Liu speaks at SICSS Beijing + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_-XzA_Z4mSPWzvLceKPUlxw)"
+    - name: "10:00 - 11:55 Zhiyuan Liu speaks at SICSS Beijing + 1:1 meetings (Topic: A Tale of Two Representations: Symbols and Embeddings; talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_-XzA_Z4mSPWzvLceKPUlxw)"
     - name: "21:00 - 23:00 Groups formed for the second week research team projects"
 
 - date: 2021-06-19
