--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -9,7 +9,7 @@
     - name: "10:00 - 11:00 Introduction and logistics"
     - name: "11:00 - 12:30 Small group discussions"
     - name: "12:30 - 1:30 Small group lunches (optional)"
-    - name: "1:30 - 3:15 Small Group Exercise on Ethics. [Activity](https://docs.google.com/document/d/1NWSXZNkqLwpk6OgaNrXR3_LN0AMWdbSM7NbItHkixNw/edit?usp=sharing); [Case Study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
+    - name: "1:30 - 3:15 Small Group Exercise on Ethics. [Intro Slides](https://docs.google.com/presentation/d/1mlJenztVceOwWa59a3rliVvkFjZk31--lrwKQRrCTfE/edit#slide=id.gdfc8f26bcc_0_0);  [Activity](https://docs.google.com/document/d/1NWSXZNkqLwpk6OgaNrXR3_LN0AMWdbSM7NbItHkixNw/edit?usp=sharing); [Case Study](https://bdes.datasociety.net/wp-content/uploads/2016/10/Patreon-Case-Study.pdf)"
     - name: "3:30 - 5:00 Talk from Vivek Singh"
 
 - date: 2021-06-15
