--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -20,7 +20,7 @@
     - name: "11:45 - 12:30 Lunch break"
     - name: "12:30 - 1:30 Tutorial Twitter API"
     - name: "1:45 - 2:30 Small Group Exercise: Design Research Question"
-    - name: "2:45 - 5:00 Collect and Describe Digital Trace Data"
+    - name: "2:45 - 5:00 Small Group Exercise: Collect and Describe Digital Trace Data"
 
 - date: 2021-06-16
   name: Automated Text Analysis
