--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -85,7 +85,7 @@
   name: Day off
 
 - date: 2021-06-21
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
   events:
     - name: "10:00 - 10:30 Research Speed Dating Logistics (*Zoom*), [Slides for Instructors] (link coming soon)"
     - name: "10:30 - 11:45 Research Speed Dating Maximally Similar Groups (*Zoom*)"
@@ -95,24 +95,24 @@
     - name: "2:45 - 3:00 Group Debrief (join research teams) (*Zoom*)"
 
 - date: 2021-06-22
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
   events:
     - name: "11:00 - 12:00 Using images and video data for social science: Challenges and opportunities (*Zoom*) [Register here](https://forms.gle/FaBQ1afa9nNdAppw8)"
     - name: "1:00 - 2:00 Introduction to Text Analysis in Python: A Hands-on Tutorial (*Zoom*) [Register here](https://forms.gle/2uWTZ4A6AAjobkrt5)"
 
 - date: 2021-06-23
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
   events:
     - name: "12:00 - 1:00 Panel discussion on the non-academic job market in computational social science (*Zoom*) [Register here](https://forms.gle/ixdR3wC4WzRRwpBS7)"
     - name: "12:30 - 1:30 Panel discussion on the (many) paths to computational social science research in law (*Zoom*) [Register here](https://maastrichtuniversity.zoom.us/meeting/register/tJAufuuorj4pHNPKZElKXdZ7rI0QAENVXfdg)"
 
 - date: 2021-06-24
-  name: Work on group projects (optional) and/or participate in SICSS Festival
+  name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
   events:
     - name: "1:00 - 2:00 Taking Quantitative Description Seriously (*Zoom*) [Register here](https://forms.gle/tRF7ttu4RoQKxfAJ7)"
 
 - date: 2021-06-25
-  name: Present group projects and/or participate in SICSS Festival
+  name: Present group projects 
   events:
     - name: "12:00 - 4:00 Present group projects (*Zoom*)"
     - name: "4:00 - 4:30 Debrief and conclusion"
