--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -113,7 +113,7 @@
     - name: "10:00 - 10:15 Logistics and introduction to [group exercise](https://compsocialscience.github.io/summer-institute/2021/materials/day2-digital-trace-data/Group_Exercise_Day_2.html) (*Zoom*) (video)"
     - name: "10:15 - 11:30 Identify a Research Question with Digital Trace Data (*Zoom*) (video)"
     - name: "11:30 - 12:00 Break"
-    - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: Wiki Education (encouraged) (*Zoom*) [(video)](https://youtu.be/m0FszWPsRYE) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)'
+    - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: Wiki Education (encouraged) (*Zoom*) [(video)](https://youtu.be/m0FszWPsRYE) (Q&A) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)'
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 2:30 Develop a Sampling Frame (*Zoom*) (video)"
     - name: "2:30 - 3:30 Populate the Sampling Frame with Screen-Scraping (*Zoom*) (video)"
@@ -128,7 +128,7 @@
     - name: "10:00 - 10:15 Logistics and introduction to [group exercise](https://compsocialscience.github.io/summer-institute/2021/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*) (video)"
     - name: "10:15 - 11:30 Extract Features from Trump Tweets (*Zoom*) (video)"
     - name: "11:30 - 12:00 Break"
-    - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: The Data Nutrition Project (encouraged) (*Zoom*) [(video)](https://youtu.be/wxZ3smIsp4A) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)'
+    - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: The Data Nutrition Project (encouraged) (*Zoom*) [(video)](https://youtu.be/wxZ3smIsp4A) (Q&A) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)'
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*) (video)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*) (video)"
@@ -142,7 +142,7 @@
     - name: "10:15 - 10:30 [Introduction to the group exercise](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/intro-to-activity.pdf), [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_participants.md); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day4-surveys/activity/lesson_plan_survey_instructor.md) (*Zoom*) (video)"
     - name: "10:30 - 11:30 Morning group exercise (*Zoom*) (video)"
     - name: "11:30 - 12:00 Break"
-    - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: The California Policy Lab (encouraged) (*Zoom*) [(video)](https://youtu.be/POVOuJJy7Zo) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)'
+    - name: '12:00 - 1:00 Bite-Sized Lunchtime Talk: The California Policy Lab (encouraged) (*Zoom*) [(video)](https://youtu.be/POVOuJJy7Zo) (Q&A) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)'
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Afternoon group exercise (*Zoom*) (video)"
     - name: "3:00 - 3:15 Break"
@@ -158,7 +158,7 @@
     - name: "10:15 - 10:30 Introduction to the group exercise [Video](https://www.youtube.com/watch?v=ZI95vV7Co38) [Slides](https://github.com/compsocialscience/summer-institute/blob/master/2020/materials/day5-mass-collaboration/06-ffchallenge_participate_activity.pdf) (*Zoom*) (video)"
     - name: "10:30 - 11:30 Participate in the Fragile Families Challenge activity [Lesson plan (participants)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_participant.md#lesson-plan-for-participants); [Lesson plan (instructors)](https://github.com/compsocialscience/summer-institute/blob/master/2021/materials/day5-mass-collaboration/activity/lesson_plan_masscollaboration_instructor.md#lesson-plan-for-instructors) (*Zoom*) (video)"
     - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: FactSpace West Africa and FakeNetAI (encouraged) (*Zoom*) [(video)](https://youtu.be/q5CVEa54Bt4) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
+    - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: FactSpace West Africa and FakeNetAI (encouraged) (*Zoom*) [(video)](https://youtu.be/q5CVEa54Bt4) (Q&A) (slides) OR R and Python Office hours with Mathematica TAs (as needed) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge activity (*Zoom*) (video)"
     - name: "3:00 - 3:15 Break"
@@ -180,16 +180,16 @@
   - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Small group lunches or participant flash talks (encouraged) (*Zoom*) (video)"
   - name: "1:00 - 4:00 Work on group projects"
-  - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) (video) (slides)"
+  - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) (video) (Q&A) (slides)"
 
 - date: 2021-06-22
   name: "Day 7: Work on group projects and participate in SICSS Festival"
   events:
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
   - name: "10:15 - 12:00 Work on group projects"
-  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: The University of California's Publisher Negotiation Team (encouraged) (*Zoom*) [(video)](https://youtu.be/euXlS8Ybo3Q) (slides)"
+  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: The University of California's Publisher Negotiation Team (encouraged) (*Zoom*) [(video)](https://youtu.be/euXlS8Ybo3Q) (Q&A) (slides)"
   - name: "1:00 - 4:00 Work on group projects" 
-  - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours (*Zoom*) (video) (slides)"
+  - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours (*Zoom*) (video) (Q&A) (slides)"
 
 - date: 2021-06-23
   name: "Day 8: Work on group projects and participate in SICSS Festival"
@@ -198,16 +198,16 @@
   - name: "10:15 - 12:00 Work on group projects"
   - name: "12:00 - 1:00 Live Mathematica Roundtable (encouraged) (*Zoom*) (video)"
   - name: "1:00 - 4:00 Work on group projects"
-  - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour (*Zoom*) (video) (slides)"
+  - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour (*Zoom*) (video) (Q&A) (slides)"
 
 - date: 2021-06-24
   name: "Day 9: Work on group projects and participate in SICSS Festival"
   events:
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
   - name: "10:15 - 4:00 Work on group projects"
-  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: vary CSS (encouraged) (*Zoom*) [(video)](https://youtu.be/q1MXHf5x7Nk) (slides)" 
+  - name: "12:00 - 1:00 Bite-Sized Lunchtime Talk: vary CSS (encouraged) (*Zoom*) [(video)](https://youtu.be/q1MXHf5x7Nk) (Q&A) (slides)" 
   - name: "1:00 - 4:00 Work on group projects"
-  - name: "4:00 - 5:30 Laura Nelson, Ph.D., Assistant Professor of Sociology, Northeastern University - live session to include Q&A and office hour (*Zoom*) (video) (slides)"
+  - name: "4:00 - 5:30 Laura Nelson, Ph.D., Assistant Professor of Sociology, Northeastern University - live session to include Q&A and office hour (*Zoom*) (video) (Q&A) (slides)"
 
 - date: 2021-06-25
   name: "Day 10: Present group projects and participate in SICSS Festival"
