update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -184,7 +184,7 @@
   - name: "4:00 - 5:30 Ruha Benjamin, Ph.D., Associate Professor of African American Studies, Princeton University - live session to include Q&A and office hours (*Zoom*) (video) (Q&A) (slides)"
 
 - date: 2021-06-22
-  name: "Day 7: Work on group projects and participate in [SICSS Festival](https://sicss.io/festival)"
+  name: "Day 7: Work on group projects and participate in SICSS Festival"
   events:
   - name: "[SICSS Festival: a series of online events such as tutorials, panel discussions, and debates](https://sicss.io/festival)"
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
@@ -194,7 +194,7 @@
   - name: "4:00 - 5:30 Chris Wheat, Ph.D., Co-President, JP Morgan Chase Institute - live session to include Q&A and office hours (*Zoom*) (video) (Q&A) (slides)"
 
 - date: 2021-06-23
-  name: "Day 8: Work on group projects and participate in [SICSS Festival](https://sicss.io/festival)"
+  name: "Day 8: Work on group projects and participate in SICSS Festival"
   events:
   - name: "[SICSS Festival: a series of online events such as tutorials, panel discussions, and debates](https://sicss.io/festival)"
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
@@ -204,7 +204,7 @@
   - name: "4:00 - 5:30 Naomi Sugie, Ph.D., Associate Professor of Criminology, Law, and Society, University of California Irvine - live session to include Q&A and office hour (*Zoom*) (video) (Q&A) (slides)"
 
 - date: 2021-06-24
-  name: "Day 9: Work on group projects and participate in [SICSS Festival](https://sicss.io/festival)"
+  name: "Day 9: Work on group projects and participate in SICSS Festival"
   events:
   - name: "[SICSS Festival: a series of online events such as tutorials, panel discussions, and debates](https://sicss.io/festival)"
   - name: "10:00 - 10:15 Logistics (*Zoom*)"
@@ -214,7 +214,7 @@
   - name: "4:00 - 5:30 Laura Nelson, Ph.D., Assistant Professor of Sociology, Northeastern University - live session to include Q&A and office hour (*Zoom*) (video) (Q&A) (slides)"
 
 - date: 2021-06-25
-  name: "Day 10: Present group projects and participate in [SICSS Festival](https://sicss.io/festival)"
+  name: "Day 10: Present group projects and participate in SICSS Festival"
   events:
   - name: "[SICSS Festival: a series of online events such as tutorials, panel discussions, and debates](https://sicss.io/festival)"
   - name: "10:00 - 10:15 Logistics"
