--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -109,6 +109,7 @@
 - date: 2021-06-24
   name: Work on group projects (optional) and/or participate in SICSS Festival (optional)
   events:
+    - name: "11:00 - 12:30 Tutorial on deep learning for causal inference (*Zoom*) [Register here](https://forms.gle/b1EV5W6g9hrkbiRJA)"
     - name: "1:00 - 2:00 Taking Quantitative Description Seriously (*Zoom*) [Register here](https://forms.gle/tRF7ttu4RoQKxfAJ7)"
 
 - date: 2021-06-25
