update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -86,7 +86,7 @@
       - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
       
     - name: "5:00 - 5:15 Break"
-    - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*) (you have received the link over email) (video)"
+    - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*) (you have received the link over email) [(video)](https://youtu.be/bovJL9GazRo)"
 
     
 - date: 2021-06-14
