--- a/_data/2021/london/schedule.yml
+++ b/_data/2021/london/schedule.yml
@@ -26,7 +26,7 @@
     - name:  "[Background Lectures](https://drive.google.com/drive/folders/1g3CPaXfSFbLcKDKaRsQ8pz2hTGc7XkW7)"
     - name: "10:00 - 11:00 Intro and logistics (Faculty leader: Nicola Perra) (*Zoom*)"
     - name: "11:00 - 11:15 Break"
-    - name: "11:15 - 12:00 Work on projects (familiarize with API and define research questions) (*Zoom)"
+    - name: "11:15 - 12:00 Work on projects (familiarize with API and define research questions) (*Zoom*)"
     - name: "12:00 - 1:00 Group lunches (optional) (*Zoom*)"
     - name: "1:00 – 2:00 Work on Projects (collect  and assess data) (*Zoom*)"    
     - mame: "2:00 — 2:30 Epidemic modeling overview (Nicola) (*Zoom*)"
