--- a/_data/2021/london/schedule.yml
+++ b/_data/2021/london/schedule.yml
@@ -29,7 +29,7 @@
     - name: "11:15 - 12:00 Work on projects (familiarize with API and define research questions) (*Zoom*)"
     - name: "12:00 - 1:00 Group lunches (optional) (*Zoom*)"
     - name: "1:00 – 2:00 Work on Projects (collect  and assess data) (*Zoom*)"    
-    - mame: "2:00 — 2:30 Epidemic modeling overview (Nicola) (*Zoom*)"
+    - name: "2:00 — 2:30 Epidemic modeling overview (Nicola) (*Zoom*)"
     - name: "2:30 – 4:00 Work on projects (*Zoom*)"
     - name: "4:00 - 6:00 Guest Speaker: Ken Benoit"
 
