--- a/_data/2021/rutgers/schedule.yml
+++ b/_data/2021/rutgers/schedule.yml
@@ -18,7 +18,7 @@
     - name: "10:00 - 10:15 Logistics"
     - name: "10:15 - 11:45 Tutorials on Screen Scraping and APIs [Tutorial files](https://drive.google.com/file/d/1WUcblvJBdUEBqiMXJCsC07jh-yHZkH1l/view?usp=sharing); [Activity](https://docs.google.com/document/d/1AIe8RawYsu02SeByzslayjdWO69-bi45yxZBbXLrAtw/edit?usp=sharing)"
     - name: "11:45 - 12:30 Lunch break"
-    - name: "12:30 - 1:30 Tutorial Twitter API"
+    - name: "12:30 - 1:30 Tutorial Twitter API [Tutorial Files](https://drive.google.com/drive/folders/1s53qqelse8iA00mb9bk-3DcM5d5yIRYT?usp=sharing)"
     - name: "1:45 - 2:30 Small Group Exercise: Design Research Question"
     - name: "2:45 - 5:00 Small Group Exercise: Collect and Describe Digital Trace Data"
 
