--- a/_data/2021/princeton/schedule.yml
+++ b/_data/2021/princeton/schedule.yml
@@ -23,10 +23,9 @@
   events:
     - name: "10:00 - 10:15 Logistics and introduction to [group exercise](https://compsocialscience.github.io/summer-institute/2021/materials/day2-digital-trace-data/Group_Exercise_Day_2.html) (*Zoom*)"
     - name: "10:15 - 11:30 Identify a Research Question with Digital Trace Data (*Zoom*)"
-    - name: "11:30 - 12:00 Break"
-    - name: "12:00 - 12:15 Flash talk by Marcos Gallo (optional) (*Zoom*)"
+    - name: "11:30 - 12:15 Break"
     - name: "12:15 - 12:30 Flash talk by Katherine Keith (optional) (*Zoom*)"
-    - name: "12:30 - 12:45 Flash talk by Killian McLoughlin (optional) (*Zoom*)"
+    - name: "12:30 - 12:45 Flash talk by Killian McLoughlin, 'Moral outrage is associated with the spread of misinformation across social media platforms' (optional) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 2:30 Develop a Sampling Frame (*Zoom*)"
     - name: "2:30 - 3:30 Populate the Sampling Frame with Screen-Scraping (*Zoom*)"
@@ -39,8 +38,7 @@
     - name: "10:15 - 11:30 Extract Features from Trump Tweets (*Zoom*)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 12:15 Flash talk by Tamara van der Does, 'Measuring Boundary Rhetoric' (optional) (*Zoom*)"
-    - name: "12:15 - 12:30 Flash talk by Yash Tadimalla (optional) (*Zoom*)"
-    - name: "12:30 - 12:45 Flash talk by Jacy Reese Anthis (optional) (*Zoom*)"
+    - name: "12:30 - 12:45 Flash talk by Jacy Reese Anthis, 'Frame Analysis with NLP, Particularly Discourse Atoms' (optional) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:30 Predict Features of Tweets associated with Retweets and Produce Visualization (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
@@ -70,6 +68,7 @@
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 12:15 Flash talk by Mario Molina (optional) (*Zoom*)"
     - name: "12:15 - 12:30 Flash talk by Luca Maria Pesando, 'Harnessing the Potential of Online Searches for Understanding the Impact of COVID-19 on Intimate Partner Violence in Italy' (optional) (*Zoom*)"
+    - name: "12:30 - 12:45 Flash talk by Marcos Gallo (optional) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
     - name: "1:15 - 3:00 Continue participating in the Fragile Families Challenge activity (*Zoom*)"
     - name: "3:00 - 3:15 Break"
@@ -113,7 +112,7 @@
     - name: "1:00 - 2:00 Taking Quantitative Description Seriously (*Zoom*) [Register here](https://forms.gle/tRF7ttu4RoQKxfAJ7)"
 
 - date: 2021-06-25
-  name: Present group projects 
+  name: Present group projects
   events:
     - name: "12:00 - 4:00 Present group projects (*Zoom*)"
     - name: "4:00 - 4:30 Debrief and conclusion"
