--- a/_data/2021/fgv-dapp-brazil/schedule.yml
+++ b/_data/2021/fgv-dapp-brazil/schedule.yml
@@ -26,7 +26,7 @@
     - name: "2:30 - 3:30 Discussing Strengths & Benefits plus Hybrid Designs (Everybody)"
     - name: "3:30 - 3:45 Debrief and logistics"
     - name: "3:45 - 4:00 Break"
-    - name: "4:00 - 4:45 GUEST-SPEAKER: **Patrícia Rossini**: Politics, Social Media, and Uncivility"
+    - name: "4:00 - 4:45 GUEST-SPEAKER: **Patrícia Rossini**:Rethinking Online Toxicity: Conceptual and Methodological Advantages of Disentangling Uncivil and Intolerant Discourse"
 
 - date: 2021-06-16
   name: Automated Text Analysis
