--- a/_data/2021/fgv-dapp-brazil/schedule.yml
+++ b/_data/2021/fgv-dapp-brazil/schedule.yml
@@ -85,7 +85,7 @@
     - name: "1:30 - 3:00 - Implementação de Metodologia Linguística, Lucas Roberto e Polyana"
     - name: "3:00 - 3:30 - FGV DAPP Call for Proposals"
     - name: "3:30 - 4:00 Break"
-    - name: "4:00 - 4:45 - WORKSHOP: **Ricardo Dahis** - A Base dos Dados"
+    - name: "4:00 - 4:45 - WORKSHOP: **Fernanda Scovino** - A Base dos Dados"
   
 - date: 2021-06-22
  
