update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -16,7 +16,7 @@
      - Bahiyyah Muhammad, Ph.D., Associate Professor, Department of Sociology and Anthropology, Howard University'
      
     - name: "1:00 - 1:15 Break" 
-    - name: '1:15 - 1:45 "Choosing Self-Care in a Hostile World" (*Zoom*) [(handout)](https://drive.google.com/file/d/1eMN39wHBZyWS-yTlgaZ0gpbiH7FuBYWc/view?usp=sharing) [(video)](https://youtu.be/uVsIIYJ5odQ)
+    - name: '1:15 - 1:45 "Choosing Self-Care in a Hostile World" (*Zoom*) [(video)](https://youtu.be/uVsIIYJ5odQ) [(handout)](https://drive.google.com/file/d/1eMN39wHBZyWS-yTlgaZ0gpbiH7FuBYWc/view?usp=sharing) 
     
       - Meckell Milburn, MA, NBC-HWC, CWP, Revolutionary Healing'
       
