--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -30,13 +30,16 @@
     - name: "18.00 - 19.00 Whole group debrief about group exercise (*Zoom*)"
     
 - date: 2021-06-16
-  name: "<b>Automated text analysis</b>"
-  events:  
-    - name: "11.45 - 12.00 Introduction to the group exercise (*Zoom*)"
-    - name: "12.00 - 15.00 Group exercise: [Lesson Plan](https://sicss.io/2021/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*)"
-    - name: "15.00 - 16.00 Guest speaker: Daniel Preotiuc (*Zoom*)"
-    - name: "16.00 - 16.30 Break"   
+  name: "<b>Automated text analysis [schedule change]</b>"
+  events:    
+    - name: "12.00 - 13.00 Small group lunches (*Zoom*)"
+    - name: "13.00 - 13.15 Break (*Zoom*)"
+    - name: "13.15 - 13.30 Introduction to the group exercise (*Zoom*)"
+    - name: "13.30 - 16.30 Group exercise: [Lesson Plan](https://sicss.io/2021/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*)"
     - name: "16.30 - 17.30 Whole group debrief about group exercise (*Zoom*)"
+    - name: "17.30 - 18.00 Break"   
+    - name: "18.00 - 19.00 Guest speaker: Daniel Preotiuc"
+
     
 - date: 2021-06-17
   name: "<b>Surveys in the Digital Age</b>"
