--- a/_data/2021/law/schedule.yml
+++ b/_data/2021/law/schedule.yml
@@ -38,7 +38,7 @@
     - name: "13.30 - 16.30 Group exercise: [Lesson Plan](https://sicss.io/2021/materials/day3-text-analysis/Group-Exercise-Day-3.html) (*Zoom*)"
     - name: "16.30 - 17.30 Whole group debrief about group exercise (*Zoom*)"
     - name: "17.30 - 18.00 Break"   
-    - name: "18.00 - 19.00 Guest speaker: Daniel Preotiuc"
+    - name: "18.00 - 19.00 Guest speaker: Daniel Preotiuc (*Zoom*)"
 
     
 - date: 2021-06-17
