--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -30,7 +30,7 @@
   name: ""
   events:
     - name: "8:30 - 9:25 Speed dating"
-    - name: "9:30 - 10:55 Reading group: Misinformation and polorization"
+    - name: "9:30 - 10:55 Reading group: Misinformation and polarization"
     - name: "21:00 - 23:00 Chris Bail speaks at SICSS Beijing (Breaking the Social Media Prism: How to Make our Platforms Less Polarizing) + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_3hSB-ET-TyW5VlbhnoHphw))"
     
 - date: 2021-06-18
@@ -51,12 +51,12 @@
   events:
     - name: "8:30 - 9:55 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
     - name: "10:00 - 11:00 Participants' research presentation: Anfan, Anmol, Guang, Zhuo"
-    - name: "21:00 - 23:00 YY Ahn speaks at SICSS Beijing (Understanding texts and networks with neural language models) + 1:1 meetings (talk open to the public; registration link TBA)"
+    - name: "21:00 - 23:00 YY Ahn speaks at SICSS Beijing (Understanding texts and networks with neural language models) + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_gA5RDulWRcCZHipc3k4Zrw))"
 
 - date: 2021-06-22
   name: ""
   events:
-    - name: "9:00 - 11:00 Yi Bu speaks at SICSS Beijing + 1:1 meetings"
+    - name: "9:00 - 11:00 Yi Bu speaks at SICSS Beijing + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_zf5YA-pxQpWyletL9WqEIw))"
     - name: "21:00 - 22:00 Participants' research presentation: Cheng-Jun, Chenshuo, Chao, Sophie"
     - name: "22:05 - 22:55 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
 
@@ -65,14 +65,14 @@
   events:
     - name: "8:30 - 9:25 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
     - name: "9:30 - 11:00 Participants' research presentation: Kunru, Sachin, Shengchun, Shiyang, Jasmine"
-    - name: "21:00 - 23:00 Mohsen Mosleh speaks at SICSS Beijing (Inaccurate and Biased Information on Social Media) + 1:1 meetings (talk open to the public; registration link TBA)"
+    - name: "21:00 - 23:00 Mohsen Mosleh speaks at SICSS Beijing (Inaccurate and Biased Information on Social Media) + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_Hr0rL84ETXy18td5eBsVHw))"
 
 - date: 2021-06-24
   name: ""
   events:
     - name: "8:30 - 9:25 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
     - name: "9:30 - 11:00 Participants' research presentation: Xiduo, Yanni, Yingdan, Yiyan, Xiangyu"
-    - name: "21:00 - 23:00 Morgan Frank speaks at SICSS Beijing (Universal resilience patterns in labor markets) + 1:1 meetings (talk open to the public; registration link TBA)"
+    - name: "21:00 - 23:00 Morgan Frank speaks at SICSS Beijing (Universal resilience patterns in labor markets) + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_jEWUwdO6TEKSzmgOj1o4Wg))"
 
 - date: 2021-06-25
   name: ""
