--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -56,7 +56,7 @@
 - date: 2021-06-22
   name: ""
   events:
-    - name: "9:00 - 11:00 Yi Bu speaks at SICSS Beijing + 1:1 meetings (talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_zf5YA-pxQpWyletL9WqEIw))"
+    - name: "9:00 - 11:00 Yi Bu speaks at SICSS Beijing + 1:1 meetings (A discipline scheme-free interdisciplinarity measurement for academic journals; talk open to the public; [registration link](https://mit.zoom.us/webinar/register/WN_zf5YA-pxQpWyletL9WqEIw))"
     - name: "21:00 - 22:00 Participants' research presentation: Cheng-Jun, Chenshuo, Chao, Sophie"
     - name: "22:05 - 22:55 Participants discuss team projects (organized by each team separately; each team can schedule extra meeting/discussion)"
 
