update howard schedule

--- a/_data/2021/howard-mathematica/schedule.yml
+++ b/_data/2021/howard-mathematica/schedule.yml
@@ -81,12 +81,12 @@
               
                 - Uncovering New Keys to Countering Anti-Black Racism and Inequity Using Computational Social Science, [SAGE Ocean blog](https://ocean.sagepub.com/blog/diversity/uncovering-new-keys-to-countering-anti-black-racism-and-inequity-using-computational-social-science)"
              
-    - name: '2:00 - 5:00 "Making Computational Methods Accessible: data visualization and teaching CSS" (*Zoom*) (you have received the link over email) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp) [(article)](https://osf.io/preprints/socarxiv/pf7n6/)
+    - name: '2:00 - 5:00 "Making Computational Methods Accessible: data visualization and teaching CSS" (*Zoom*) [(video)](https://youtu.be/kQ4G4LCamlM) [(Workshop materials)](https://github.com/jaeyk/sicss-howard-r-boot-camp) [(article)](https://osf.io/preprints/socarxiv/pf7n6/)
     
       - Jae Yeon Kim, Ph.D., Assistant Research Scholar, SNF Agora Institute, Johns Hopkins University'
       
     - name: "5:00 - 5:15 Break"
-    - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*) (you have received the link over email) [(video)](https://youtu.be/bovJL9GazRo)"
+    - name: "5:15 - 6:15 SICSS-Howard/Mathematica Kick-off and Opening Plenary: President Wayne A.I. Frederick, Howard University (*Zoom*) [(video)](https://youtu.be/bovJL9GazRo)"
 
     
 - date: 2021-06-14
