--- a/_data/2021/beijing/schedule.yml
+++ b/_data/2021/beijing/schedule.yml
@@ -10,7 +10,7 @@
     - name: "8:00 - 8:25 Introduction and logistics"
     - name: "8:30 - 9:25 Speed dating"
     - name: "9:30 - 10:55 Reading group: Introduction to networks"
-    - name: "21:00 - 22:30 Sandy Pentland speaks at SICSS Beijing + Q&A; Topic: Idea Flow and Economic Growth [(paper)](https://ieeexplore.ieee.org/document/9241510); Talk open to the public; [zoom registration link](https://mit.zoom.us/webinar/register/WN_B_ZCsGy5SRyn4_2Ue_PWig)"
+    - name: "21:00 - 22:30 Sandy Pentland speaks at SICSS Beijing + Q&A; Topic: Idea Flow and Economic Growth [(paper)](https://ieeexplore.ieee.org/document/9241510); Talk open to the public; [zoom registration link](https://mit.zoom.us/webinar/register/WN_B_ZCsGy5SRyn4_2Ue_PWig) [video](https://mit.zoom.us/rec/play/lT-fnBD5QQ6NFEypQnV7DPzw0DTlfEPWCvsq1LbKr8mZikv-K7ap-hQxZYKtkQMBpmK6t6kJFeGqqnCn.zJRf9Hv65MBywuXq?startTime=1623674805000)"
 
 - date: 2021-06-15
   name: ""
