--- a/_data/2021/chicago/schedule.yml
+++ b/_data/2021/chicago/schedule.yml
@@ -23,7 +23,7 @@
 - date: 2021-06-16
   name: Text Analysis
   events:
-    - name: "10:00 - 12:30 Annoucnements & Guest Lecturer: Christina Maimone, Northwestern University Research and & Computing Services"
+    - name: "10:00 - 12:30 Announcments & Guest Lecturer: Christina Maimone, Northwestern University Research and & Computing Services"
     - name: "12:30 - 1:00 Lunch & Introduction to Activity"
     - name: "1:00 - 2:00 Group Work"
     - name: "2:00 - 3:00 Guest Lecturer: Dashun Wang"
@@ -32,7 +32,7 @@
 - date: 2021-06-17
   name: Surveys 
   events:
-    - name: "10:00 - 11:30 Announcmenets and an Introduction to Surveys"
+    - name: "10:00 - 11:30 Announcements and an Introduction to Surveys"
     - name: "11:30 - 12:00 Survey Launch"
     - name: "12:00 - 1:00 Guest Lecturer: Abigail Jacobs"
     - name: "1:00 - 1:30 Lunch"
@@ -42,7 +42,7 @@
 - date: 2021-06-18
   name: Mass Collaboration & Experiments
   events:
-    - name: "10:00 - 11:00 Introduction to Mass Collaboration & Experiments"
+    - name: "10:00 - 11:00 Announcements & Introduction to Mass Collaboration & Experiments"
     - name: "11:00 - 1:00 Lunch & Lightning Talks"
     - name: "1:00 - 2:00 SCALES"
     - name: "2:00 - 4:30 Group Formation For Week 2, Group Work"
